Fixed spacing and added link button which redirects to item page

--- a/src/components/Analysis/Analysis.css
+++ b/src/components/Analysis/Analysis.css
@@ -160,9 +160,9 @@ button.best-choice {
 }
 
 .items-grid {
-   display: grid;
-   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); 
-   gap: 15px; 
+   display: flex;
+   flex-wrap: wrap; /* Allow items to wrap to the next line */
+   gap: 15px; /* Set a gap between items */
 }
 
 .item-card {
@@ -173,10 +173,14 @@ button.best-choice {
    justify-content: space-between;
    align-items: center;
    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1);
+   margin-bottom: 15px;
 }
+
+
 
 .item-card p {
    margin: 0;
+   margin-right: 5px;
    font-size: 1.1rem;
    font-weight: 500;
 }
@@ -200,4 +204,22 @@ button.best-choice {
 
 .unavailable span {
    margin-right: 5px;
+}
+
+.available {
+   display: flex; 
+   align-items: center; 
+   gap: 10px;
+}
+
+.externalLink {
+   background-color: #eee;
+   padding: 5px 10px;
+   border-radius: 12px;
+   font-weight: bold;
+   cursor: pointer;
+}
+
+.externalLink a {
+   color:#000
 }
